# podsumowywator-hackathon

./: .env.example  .envrc  .gitignore  .tool-versions  README.md  package-lock.json  package.json  pyproject.toml  requests.http  setup.py  tsconfig.json
bbackend/: .gitignore  Makefile  README.md  api.http  main.py  pyproject.toml
bbackend/src/: agent.py  config.json  config_loader.py  const.py  dtos.py  memory.py  prompt.py
bbackend/src/prompts/: date_processor_prompt.py  image_description_prompt.py  orchestrator_prompt.py  summarizer_prompt.py  web_summarizer_prompt.py
bbackend/src/tools/: date_processor.py  describe_image.py  load_messages.py  orchestrator_tools.py  read_through_cache.py  summarize.py  summarizer.py  summarizer_tools.py  tools.py  web_summarizer.py
bbackend/src/tools/tests/: test_read_through_cache.py
src/: index.ts  logger.ts  server.http  server.ts
src/helpers/: discord.ts
src/services/: client.ts  context.ts  discord.ts
src/utils/: helpers.ts  prompts.ts  replaceUserMentionsWithUsernames.ts
