[tool.poetry]
name = "bbackend"
version = "0.1.0"
description = ""
authors = ["Dombear <domin.dober@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai-agents = "^0.0.13"
fastapi = "^0.111.0"
uvicorn = "^0.27.1"
ruff = "^0.11.7"
pydantic = "^2.11.3"
loguru = "^0.7.3"
pytest = "^8.3.5"
ptw = "^1.0.1"
pytest-watch = "^4.2.0"
firecrawl-py = "^2.4.0"
agentic-radar = "^0.9.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
